--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 .container {
   background-color: #c2c8cb;
   margin: auto;
-  width: 99vw;
+  width: 100vw;
   display: flex;
   border-radius: 5px;
 }
@@ -44,7 +44,7 @@ body {
   color: black;
   font-size: 17px;
   text-align: center;
-  padding-top: 20px;
+  padding: 20px 50px 20px 50px;
 }
 
 .container .footer {
